--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,46 +1,7 @@
 body {
-    width: 100vw;
+  width: 100vw;
 }
-.left-contents{
-  position: absolute;
-  width: 300px;
-  height: 100vh;
-  background-color: #2f3e51;
-  float: left;
-    .user{
-      height: 100px;
-      background-color: #253141;
-      padding: 0 20px;
-      .user__name{
-        font-size: 16px;
-        font-weight: bold;
-        color: #FFFFFF;
-        float: left;
-        line-height: 20px;
-        padding: 40px 0;
-      }
-      .icon{
-        float: right;
-        color: #FFFFFF;
-        line-height: 20px;
-        padding: 40px 0 40px 9px;
-        font-size: 20px;
-      }
-    }
-    .gruop{
-      padding: 20px 20px;
-        .gruop__name {
-          font-size: 15px;
-          color: #FFFFFF;
-        }
-        .gruop__text {
-          padding: 5px 0 0px 0;
-          font-size: 11px;
-          color: #FFFFFF;
-        }
-    }
-}
-.right-contents {
+.chat-main {
   height: 100vh;
   width: calc(100vw - 300px);
   background-color: #AAAAAA;
@@ -48,7 +9,7 @@ body {
   .top {
     padding: 0 40px;
     height: 100px;
-    background-color: white;
+    background-color: $color-white;
     border-bottom : thin solid #eeeeee;
     .top__gruop {
       float: left;
@@ -75,7 +36,7 @@ body {
   .chat {
     padding: 6px 40px 0px 40px;
     height: calc(100vh - 197px);
-    background-color: #FFFFFF;
+    background-color: $color-white;
     opacity: 0.95;
       .chat__box {
         margin-top: 40px;
@@ -83,8 +44,8 @@ body {
           font-size: 16px;
           font-weight: bold;
           color: #434A54;
-          float: left;
           margin-right: 10px;
+          float: left;
         }
         .chat__box--date {
           font-size: 12px;
@@ -106,34 +67,34 @@ body {
   height: 50px;
   padding: 20px 40px;
   background-color: #DDDDDD;
-      .message__box {
+    .message__box {
+      width: calc(100% - 115px);
+      height: 50px;
+      padding-left: 10px;
+      background-color: $color-white;
+      box-sizing: border-box;
+      float: left;
+      .message__box--message {
+        line-height: 50px;
+        font-size: 16px;
+        color: #434A54;
         float: left;
-        width: calc(100% - 115px);
-        height: 50px;
-        padding-left: 10px;
-        background-color: white;
-        box-sizing: border-box;
-        .message__box--message {
-          line-height: 50px;
-          font-size: 16px;
-          color: #434A54;
-          float: left;
-        }
-        .icon {
-          margin-right: 10px;
-          line-height: 50px;
-          color: #253141;
-          float: right;
-        }
       }
+      .icon {
+        margin-right: 10px;
+        line-height: 50px;
+        color: #253141;
+        float: right;
+      }
+    }
     .message__send {
       line-height: 50px;
       margin-left: 15px;
       width: 100px;
       background-color: #38AEF0;
       color: white;
-      float: right;
       text-align: center;
+      float: right;
     }
   }
 }
