--- a/app/views/chats/index.html.haml
+++ b/app/views/chats/index.html.haml
@@ -1,18 +1,5 @@
-.left-contents
-  .user
-    .user__name 荒木真
-    .icon.fa.fa-cog
-    .icon.fa.fa-pencil-square-o
-  .gruop
-    .gruop__name テストグループ1
-    .gruop__text テスト1
-  .gruop
-    .gruop__name テストグループ2
-    .gruop__text テスト2
-  .gruop
-    .gruop__name テストグループ3
-    .gruop__text テスト3
-.right-contents
+= render 'side'
+.chat-main
   .top
     .top__gruop
       .top__gruop--name テストグループ1
