--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -13,12 +13,12 @@ body {
     border-bottom : thin solid #eeeeee;
     &__gruop {
       float: left;
-        .top__gruop--name {
+        &--name {
           font-size: 20px;
           color: #333333;
           padding: 30px 0 10px 0;
         }
-        .top__gruop--member {
+        &--member {
           font-size: 12px;
           color: #999999;
         }
@@ -40,7 +40,7 @@ body {
     opacity: 0.95;
       &__box {
         margin-top: 40px;
-        .chat__box--name {
+        &--name {
           font-size: 16px;
           font-weight: bold;
           color: #434A54;
