--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -2,7 +2,7 @@
   width: 980px;
   margin: 60px auto;
   padding: 40px;
-  background-color: #fff;
+  background-color: $color-white;
   border: 1px solid #ddd;
   border-radius: 5px;
   box-sizing: border-box;
@@ -13,7 +13,7 @@
     text-align: center;
   }
 
-  .chat-group-form__errors {
+  &__errors {
     margin: 30px 0;
     padding: 20px 40px;
     border: 1px solid #ddd;
@@ -39,10 +39,10 @@
     }
   }
 
-  .chat-group-form__field {
+  &__field {
     margin-top: 30px;
 
-    .chat-group-form__field--left {
+    &__field--left {
       float: left;
       width: 30%;
       padding-right: 20px;
@@ -50,19 +50,19 @@
       box-sizing: border-box;
     }
 
-    .chat-group-form__field--right {
+    &__field--right {
       float: right;
       width: 70%;
     }
 
-    .chat-group-form__label {
+    &__label {
       display: block;
       line-height: 50px;
       font-weight: bold;
       text-align: right;
     }
 
-    .chat-group-form__input {
+    &__input {
       float: left;
       width: 100%;
       line-height: 30px;
@@ -77,11 +77,11 @@
     font-size: 14px;
     border-bottom: 1px solid #ddd;
 
-    .chat-group-user__name {
+    &__name {
       float: left;
     }
 
-    .chat-group-user__btn {
+    &__btn {
       float: right;
       display: inline-block;
       cursor: pointer;
