--- a/app/views/chats/_side.html.haml
+++ b/app/views/chats/_side.html.haml
@@ -4,14 +4,6 @@
       = current_user.name
     = link_to edit_user_registration_path, class: 'icon' do
       %icon.fa.fa-cog
-    = link_to "hoge", class: 'icon' do
+    = link_to new_group_path, class: 'icon' do
       %icon.fa.fa-pencil-square-o
-  .gruop
-    .gruop__name テストグループ1
-    .gruop__text テスト1
-  .gruop
-    .gruop__name テストグループ2
-    .gruop__text テスト2
-  .gruop
-    .gruop__name テストグループ3
-    .gruop__text テスト3
+  = render @groups
