--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,11 +1,11 @@
 .chat-group-form
-  %h1 新規チャットグループ
+  %h1 チャットグループ編集
   = form_for @group do |f|
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, "グループ名", class: "chat-group-form__field__label"
       .chat-group-form__field--right
-        = f.text_field :name, placeholder: "グループ名を入力してください", class: "chat-group-form__field__input"
+        = f.text_field :name, placeholder: "グループ名を入力してください", class: "chat-group-form__field__input", id: "chat_group_name", value:@group.name, type: "text"
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :チャットメンバー, class: "chat-group-form__field__label"
@@ -15,4 +15,4 @@
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
-        = f.submit :Save, class: "chat-group-form__action-btn"
+        = f.submit "Save", class: "chat-group-form__action-btn"
