--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -35,13 +35,14 @@ p.flash {
         }
     }
     &__edit {
-      line-height: 40px;
       margin: 28px 0px;
-      padding: 0px 20px;
+      line-height: 40px;
       border : 2px solid #38AEF0;
       color: #38AEF0;
       float: right;
         a {
+        display: block;
+        padding: 0px 20px;
         color: #38AEF0;
         font-size: 14px;
         text-decoration: none;
@@ -50,12 +51,13 @@ p.flash {
   }
 
   .chat {
-    padding: 6px 40px 0px 40px;
-    height: calc(100vh - 197px);
+    padding: 16px 40px 0px 40px;
+    height: calc(100vh - 206px);
     background-color: $color-white;
     opacity: 0.95;
+    overflow: auto;
       &__box {
-        margin-top: 40px;
+        margin-bottom: 40px;
         &--name {
           font-size: 16px;
           font-weight: bold;
