--- a/app/views/chats/_chat.html.haml
+++ b/app/views/chats/_chat.html.haml
@@ -2,6 +2,6 @@
   .chat__box--name
     = chat.user.name
   .chat__box--date
-    = chat.created_at
+    = chat.created_at.strftime("%Y-%m-%d %H:%M:%S")
   .chat__box--text
     = chat.text
