--- a/app/views/chats/_chat.html.haml
+++ b/app/views/chats/_chat.html.haml
@@ -1,7 +1,7 @@
 .chat__box
   .chat__box--name
-    = chat.user.name
+    = chat.name
   .chat__box--date
-    = chat.created_at.strftime("%Y-%m-%d %H:%M:%S")
+    = chat.date
   .chat__box--text
     = chat.text
