--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,18 +1,3 @@
 .chat-group-form
   %h1 新規チャットグループ
-  = form_for @group do |f|
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-        = f.label :name, "グループ名", class: "chat-group-form__field__label"
-      .chat-group-form__field--right
-        = f.text_field :name, placeholder: "グループ名を入力してください", class: "chat-group-form__field__input"
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-        = f.label :チャットメンバー, class: "chat-group-form__field__label"
-      .chat-group-form__field--right
-        .chat-group-user.clearfix
-          = f.collection_check_boxes(:user_ids, User.all, :id, :name)
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-      .chat-group-form__field--right
-        = f.submit :Save, class: "chat-group-form__action-btn"
+  = render 'form', group: @group, users: @users
