--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -79,6 +79,9 @@ p.flash {
           padding-top: 10px;
           clear: both;
         }
+        &--image {
+          padding-top: 10px;
+        }
       }
   }
   .message {
