--- a/app/views/chats/index.html.haml
+++ b/app/views/chats/index.html.haml
@@ -16,7 +16,7 @@
     = form_for [@group, @chat], html: {class: "chat_form"} do |f|
       .message__box
         = f.text_field :text, placeholder: "type a message", class: "message__box--text"
-        %label.i.icon.fa.fa-picture-o{ for: 'img' }
-          = f.file_field :image, id: 'img', style: "display: none;"
+        %label.i.icon.fa.fa-picture-o{ for: 'image_file' }
+          = f.file_field :image, id: 'image_file', style: "display: none;"
       = f.submit :Send, class: "message__send"
 
